views: remove BrowserNonClientFrameViewMac::PaintToolbarBackground

This method is painting the toolbar background incorrectly, and the parent
class's implementation does it correctly.

Bug: 712271
Change-Id: Ib9fd3ef67799545ec6c826b0e2e9c3a4b3cc3486
Reviewed-on: https://chromium-review.googlesource.com/646451
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498938}
Former-commit-id: bfb22fd5548521c3d9796ecfc1817e14151ab5d1