chrome/browser/ui/views/frame/browser_non_client_frame_view_mac.h
@@ -43,7 +43,6 @@ class BrowserNonClientFrameViewMac : public BrowserNonClientFrameView {
 
  private:
   void PaintThemedFrame(gfx::Canvas* canvas);
-  void PaintToolbarBackground(gfx::Canvas* canvas);
 
   DISALLOW_COPY_AND_ASSIGN(BrowserNonClientFrameViewMac);
 };
